BIG commit. Reorganized photos in img/ to be split between demo images and app-made images. Fixed model.py so that it adds records accurately to user table. Added user login, logout, and profile page plus routes for all of those things. Added a form on the homepage for users to submit an image URL. The image is now correctly added to the static/img/photos folder. Commented out most styling for visibility of unstyled elements. TODO: Test image and userimage tables for reading and writing. Add images to the database -- possibly by writing file content to a field.

--- a/static/styles.css
+++ b/static/styles.css
@@ -6,11 +6,12 @@ html {
 }
 
 body { 
-    background-color: black;
+    /*background-color: black;*/
+    /*color: white;*/
 }
 
 a {
-    color: #FFF9C4;
+    color: #337ab7;
 }
 
 a:hover {
@@ -18,7 +19,7 @@ a:hover {
 }
 
 h1, h2, h3, h4, h5, h6 {
-    color: #00acc1;
+    /*color: #00acc1;*/
 }
 
 h1 img.logo {
